'doing to solve button collapse issue..'

--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -270,7 +270,7 @@
     .secondary-btn {
         padding: 5px;
         font-size: 1rem;
-        font-weight: 550;
+        font-weight: 500;
     }
 
     .header {
